RESOLVED FIXED223218
[WK2] Can get stuck in fullscreen mode if node is removed prior to receiving willEnterFullscreen()
https://bugs.webkit.org/show_bug.cgi?id=223218
Summary [WK2] Can get stuck in fullscreen mode if node is removed prior to receiving ...
Jer Noble
Reported 2021-03-15 15:14:49 PDT
[WK2] Can get stuck in fullscreen mode if node is removed prior to receiving willEnterFullscreen()
Attachments
Patch (17.06 KB, patch)
2021-03-15 15:19 PDT, Jer Noble
eric.carlson: review+
Patch for landing (16.96 KB, patch)
2021-03-15 17:34 PDT, Jer Noble
no flags
Patch for landing (16.96 KB, patch)
2021-03-15 17:36 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2021-03-15 15:15:47 PDT
Jer Noble
Comment 2 2021-03-15 15:19:51 PDT
Eric Carlson
Comment 3 2021-03-15 16:06:39 PDT
Comment on attachment 423252 [details] Patch r=me once the bots are happy
Peng Liu
Comment 4 2021-03-15 16:18:08 PDT
Comment on attachment 423252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=423252&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/FullscreenRemoveNodeBeforeEnter.mm:30 > +// Enable theis test on iOS once that issue is resolved. Nit. s/theis/this/g
Jer Noble
Comment 5 2021-03-15 17:34:34 PDT
Created attachment 423271 [details] Patch for landing
Jer Noble
Comment 6 2021-03-15 17:36:01 PDT
Created attachment 423272 [details] Patch for landing
EWS
Comment 7 2021-03-15 20:03:29 PDT
Committed r274460: <https://commits.webkit.org/r274460> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423272 [details].
Note You need to log in before you can comment on or make changes to this bug.