[WK2] Can get stuck in fullscreen mode if node is removed prior to receiving willEnterFullscreen() https://bugs.webkit.org/show_bug.cgi?id=223218 <rdar://75009548>

Reviewed by Eric Carlson.

Source/WebCore:

Return false from the following functions if a preflight check kept the function
from completing.

* dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::willEnterFullscreen):
(WebCore::FullscreenManager::didEnterFullscreen):
(WebCore::FullscreenManager::willExitFullscreen):
(WebCore::FullscreenManager::didExitFullscreen):
* dom/FullscreenManager.h:

Source/WebKit:

There are a number of preflight checks made in each of the listed functions below,
and those preflights can corrupt the state machine of the UIProcess's fullscreen
code. If any of the preflights fail, use the new return value of those methods to
close() the fullscreen presentation.

* WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::willEnterFullScreen):
(WebKit::WebFullScreenManager::didEnterFullScreen):
(WebKit::WebFullScreenManager::willExitFullScreen):
(WebKit::WebFullScreenManager::requestExitFullScreen):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/FullscreenRemoveNodeBeforeEnter.mm: Added.
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/235316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274460 268f45cc-cd09-0410-ab3c-d52691b4dbfc